[gd_scene load_steps=7 format=2]

[ext_resource path="res://Misc/Overlap/TouchPortal.gd" type="Script" id=1]
[ext_resource path="res://Misc/Black.jpg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150.592, 30.5 )

[sub_resource type="Animation" id=2]
resource_name = "Quit"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TouchPortal" type="Area2D"]
position = Vector2( 0, 12 )
collision_layer = 8192
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.5 )
shape = SubResource( 1 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 150.672, -12 )
rotation = 1.57731
enabled = true
cast_to = Vector2( 0, 300 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Black" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 972, 544 )
scale = Vector2( 6.48, 6.47619 )
texture = ExtResource( 2 )

[node name="StartAnim" type="AnimationPlayer" parent="CanvasLayer/Black"]
reset_on_save = false
anims/Quit = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Start = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_PortalInLevel_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
